jquery.com issue#70 logos center-aligned for phone

--- a/themes/jquery.com/style.css
+++ b/themes/jquery.com/style.css
@@ -130,6 +130,7 @@ a,
 #content #corporate-members li {
 	background: none;
 	height: 150px;
+	text-align: center;
 }
 
 #corporate-members span {
